Closed Bug 1712038 Opened 4 years ago Closed 4 years ago

YouTube Video Automatically Exits Full-Screen Mode When Another YouTube Tab Opened in Background Finish Loading With Fission Enabled

Categories

(Core :: DOM: Core & HTML, defect, P2)

defect

Tracking

()

RESOLVED FIXED
90 Branch
Fission Milestone M7a
Tracking Status
firefox88 --- disabled
firefox89 --- disabled
firefox90 --- fixed

People

(Reporter: snugs.steed0e, Assigned: edgar)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

Steps to Reproduce

  1. Ensure you have Fission enabled.
  2. Open any YouTube video and enter full-screen mode.
  3. While in full-screen mode, scroll down to the suggested videos section and open any one of them in a new tab.
  4. Wait and observe.

Expected Result

Nothing visible happens while the newly opened video in another tab loads in the background.

Actual Result

When the newly opened video in another tab finishes loading, the currently-focused video automatically exits full-screen mode, for some reason.

Additional Information

  • This bug does not reproduce when Fission is disabled (setting fission.autostart to false and restarting the browser).
  • Unfortunately, I was unable to obtain the regression range for this bug since even the earliest build available contains this bug.
Summary: YouTube Video Automatically Exits Full Screen Mode When Another YouTube Tab Opened in Background Finished Loading When Fission is Enabled → YouTube Video Automatically Exits Full-Screen Mode When Another YouTube Tab Opened in Background Finish Loading With Fission Enabled

Thanks for the bug report, SL! I can reproduce this Fission bug on my Windows 10 laptop.

I tested opening the second video in a new tab using Ctrl+click and with right-click > "Open Link in New Tab". I could reproduce with either method.

Status: UNCONFIRMED → NEW
Fission Milestone: --- → ?
Ever confirmed: true
Component: General → DOM: Core & HTML

I could also reproduce this, taking the bug.

Assignee: nobody → echen
Attached file test.html

Here is the test script to reproduce the similar behavior.

  1. Enter the button to enter fullscreen
  2. ctrl+click the link to open a background tab.

Comparing the behavior with STR in comment #0 on Fission and non-Fission, non-Fission don't encounter the issue is just because the background tab wouldn't try to focus the player element, not sure why, but anyhow, the focus() call on background tab should not cause the fullscreen get exited.

So this actually isn't a Fission specific issue, we could also reproduce this on non-Fission with the test attached in comment 4.

I ran mozregression and got following range,
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=46e1717494fbf0f1913e22052c3304fe9f7c19b8&tochange=3f72a81bd12cb6048f03a96e5b403621f7fac052

Probably caused by bug 1432856.

But if the real world example is Fission only, I think this should be tracked as part of Fission.

Fission Milestone: ? → M7a
Attachment #9223894 - Attachment description: Bug 1712038 - Exit fullscreen only when the focus change will raise the window; → WIP: Bug 1712038 - Exit fullscreen only when the focus change will raise the window;
Attachment #9223894 - Attachment description: WIP: Bug 1712038 - Exit fullscreen only when the focus change will raise the window; → Bug 1712038 - Exit fullscreen only when the focus change will raise the window; r=smaug
Pushed by echen@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a9fa2b1591c7 Exit fullscreen only when the focus change will raise the window; r=smaug
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch
Regressed by: CVE-2020-6810
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: