Bug 1712038 - Exit fullscreen only when the focus change will raise the window; r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D116182