browser/base/content/test/fullscreen/browser_fullscreen_window_focus.js
@@ -13,13 +13,13 @@ const TEST_URL =
   "http://example.com/browser/browser/base/content/test/fullscreen/open_and_focus_helper.html";
 const IFRAME_ID = "testIframe";
 
-async function testWindowFocus(iframeID) {
+async function testWindowFocus(isPopup, iframeID) {
   let tab = await BrowserTestUtils.openNewForegroundTab(gBrowser, TEST_URL);
 
   info("Calling window.open()");
-  let popup = await jsWindowOpen(tab.linkedBrowser, iframeID);
+  let openedWindow = await jsWindowOpen(tab.linkedBrowser, isPopup, iframeID);
   info("re-focusing main window");
-  await waitForFocus();
+  await waitForFocus(tab.linkedBrowser);
 
   info("Entering full-screen");
   await changeFullscreen(tab.linkedBrowser, true);
@@ -30,7 +30,42 @@ async function testWindowFocus(iframeID) {
   });
 
   // Cleanup
-  popup.close();
+  if (isPopup) {
+    openedWindow.close();
+  } else {
+    BrowserTestUtils.removeTab(openedWindow);
+  }
+  BrowserTestUtils.removeTab(tab);
+}
+
+async function testWindowElementFocus(isPopup) {
+  let tab = await BrowserTestUtils.openNewForegroundTab(gBrowser, TEST_URL);
+
+  info("Calling window.open()");
+  let openedWindow = await jsWindowOpen(tab.linkedBrowser, isPopup);
+  info("re-focusing main window");
+  await waitForFocus(tab.linkedBrowser);
+
+  info("Entering full-screen");
+  await changeFullscreen(tab.linkedBrowser, true);
+
+  await testExpectFullScreenExit(tab.linkedBrowser, false, async () => {
+    info("Calling element.focus() on popup");
+    await ContentTask.spawn(tab.linkedBrowser, {}, async args => {
+      await content.wrappedJSObject.sendMessage(
+        content.wrappedJSObject.openedWindow,
+        "elementfocus"
+      );
+    });
+  });
+
+  // Cleanup
+  await changeFullscreen(tab.linkedBrowser, false);
+  if (isPopup) {
+    openedWindow.close();
+  } else {
+    BrowserTestUtils.removeTab(openedWindow);
+  }
   BrowserTestUtils.removeTab(tab);
 }
 
@@ -43,10 +78,26 @@ add_task(async function setup() {
   });
 });
 
-add_task(function test_parentWindowFocus() {
-  return testWindowFocus();
+add_task(function test_popupWindowFocus() {
+  return testWindowFocus(true);
 });
 
-add_task(function test_iframeWindowFocus() {
-  return testWindowFocus(IFRAME_ID);
+add_task(function test_iframePopupWindowFocus() {
+  return testWindowFocus(true, IFRAME_ID);
+});
+
+add_task(function test_popupWindowElementFocus() {
+  return testWindowElementFocus(true);
+});
+
+add_task(function test_backgroundTabFocus() {
+  return testWindowFocus(false);
+});
+
+add_task(function test_iframebackgroundTabFocus() {
+  return testWindowFocus(false, IFRAME_ID);
+});
+
+add_task(function test_backgroundTabElementFocus() {
+  return testWindowElementFocus(false);
 });
