browser/base/content/test/fullscreen/head.js
@@ -51,7 +51,7 @@ async function changeFullscreen(browser, fullScreenState) {
 }
 
 async function testExpectFullScreenExit(browser, leaveFS, action) {
-  let fsPromise = waitForFullScreenState(browser, !leaveFS);
+  let fsPromise = waitForFullScreenState(browser, false);
   if (leaveFS) {
     if (action) {
       await action();
@@ -88,9 +88,26 @@ function jsWindowFocus(browser, iframeId) {
   });
 }
 
-async function jsWindowOpen(browser, iframeId) {
-  let windowOpened = BrowserTestUtils.waitForNewWindow();
-  ContentTask.spawn(browser, { iframeId }, async args => {
+function jsElementFocus(browser, iframeId) {
+  return ContentTask.spawn(browser, { iframeId }, async args => {
+    let destWin = content;
+    if (args.iframeId) {
+      let iframe = content.document.getElementById(args.iframeId);
+      if (!iframe) {
+        throw new Error("iframe not set");
+      }
+      destWin = iframe.contentWindow;
+    }
+    await content.wrappedJSObject.sendMessage(destWin, "elementfocus");
+  });
+}
+
+async function jsWindowOpen(browser, isPopup, iframeId) {
+  //let windowOpened = BrowserTestUtils.waitForNewWindow();
+  let windowOpened = isPopup
+    ? BrowserTestUtils.waitForNewWindow()
+    : BrowserTestUtils.waitForNewTab(gBrowser, null, true);
+  ContentTask.spawn(browser, { isPopup, iframeId }, async args => {
     let destWin = content;
     if (args.iframeId) {
       // Create a cross origin iframe
@@ -99,7 +116,10 @@ async function jsWindowOpen(browser, iframeId) {
       ).contentWindow;
     }
     // Send message to either the iframe or the current page to open a popup
-    await content.wrappedJSObject.sendMessage(destWin, "open");
+    await content.wrappedJSObject.sendMessage(
+      destWin,
+      args.isPopup ? "openpopup" : "open"
+    );
   });
   return windowOpened;
 }
